[gd_scene load_steps=6 format=3 uid="uid://cf2ha5qruwm47"]

[ext_resource type="FontFile" uid="uid://b8pvc0etwwo81" path="res://fonts/DeltaBlock-2Oee3.ttf" id="1_hdhap"]
[ext_resource type="Script" path="res://scenes_2d/main_menus/scripts/stage_select_option.gd" id="2_tuiau"]
[ext_resource type="PackedScene" uid="uid://ddpbkvarml5rb" path="res://scenes_2d/b_button.tscn" id="3_781ph"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p0ni0"]
bg_color = Color(0, 0, 0, 0.196078)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kl0ot"]
bg_color = Color(0, 0, 0, 0.501961)

[node name="StageSelectOption" type="Button"]
custom_minimum_size = Vector2(200, 80)
offset_right = 192.0
offset_bottom = 48.0
size_flags_horizontal = 3
mouse_filter = 1
theme_override_fonts/font = ExtResource("1_hdhap")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxFlat_p0ni0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kl0ot")
text = "Stage 1-1"
script = ExtResource("2_tuiau")

[node name="BButton" parent="." instance=ExtResource("3_781ph")]
visible = false
position = Vector2(167, 40)
scale = Vector2(0.75, 0.75)

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
